public/css/stylesheet.css
html, body {
    width: 100%;
    height: 100%;
    font-family: 'Raleway', sans-serif;
    margin: 0;
    padding: 0;
    background-color: rgb(250, 250, 250);

}

header {
    background-color: #ffe4c4;
}

main {
    background-color: #bdb76b;
}

/* Sticks the Footer to the bottom of the page */
.content {
    min-height: 82%;
}

/* Nav Hover Color */
.nav-link:hover {
    color: #5DB856 !important;
}

/* Nav Logo CSS */
.navbar-brand {
    display: flex;
    justify-content: center;
    align-items: center;

}

/* Card Column on Homepage CSS */
/* Small Screens */
@media (min-width: 34em) {
    .card-columns {
        -webkit-column-count: 2;
        -moz-column-count: 2;
        column-count: 2;
    }
}

/* Medium Screens*/
@media (min-width: 48em) {
    .card-columns {
        -webkit-column-count: 3;
        -moz-column-count: 3;
        column-count: 3;
    }
}

/* Large Screens */
@media (min-width: 62em) {
    .card-columns {
        -webkit-column-count: 4;
        -moz-column-count: 4;
        column-count: 4;
    }
}

/* X-Large Screens*/
@media (min-width: 75em) {
    .card-columns {
        -webkit-column-count: 5;
        -moz-column-count: 5;
        column-count: 5;
    }
}

/* Card Shadow Effect and Hover  */
.card{
	box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.16), 0 1px 7px 0 rgba(0, 0, 0, 0.12);
	transition: all 0.4s cubic-bezier(.25,.8,.25,1);
}
.card:hover {
  	box-shadow: 0 4px 6px rgba(0,0,0,0.25), 0 4px 9px rgba(0,0,0,0.22);
}

/* Prompt for Password Validation */
.help-block {
    color: red !important;
}

/* Navigation bar header */
.navbar-header {
    color: #d0f2f1;
    font-weight: bold;
    font-size: 1.4em;
}
/* --------------------------- Drop Down Menu and Sub Menu Fixes --------------------------- */
/*
Aligns Main Menu under button
.dropdownfix{
    margin-top: 0px !important;
    left: auto !important;
    border-radius: .9rem !important;
    text-align: right !important;
    background-color: rgba(250, 250, 250, 0.97) !important;
}
.dropdown-submenu {
    position: relative;
}
.dropdown-submenu > .dropdown-menu {
    top: 0;
    left: 95%;
    text-align: right;
    margin-top: -6px;
    margin-left: 0px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px;
    border-radius: 0.8rem;
    background-color: rgba(250, 250, 250, 0.97);
}
.dropdown-submenu:hover > .dropdown-menu {
    display: block;
}

.dropdown-submenu:hover > a:after {
    border-left-color: #808080;
}
.dropdown-submenu.pull-left {
    float: none;
}
.dropdown-submenu.pull-left > .dropdown-menu {
    left: -100%;
    background-color: rgba(250, 250, 250, 0.97);
    text-align: center;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 0.85rem;
}*/
/*login & register page font size*/

.authenticationContainer {
    padding-top: 20px;
    padding-bottom: 20px;
}

.panel-heading h1{
  width:100px;
  height:50px;
  position:relative;
  left:1.1%;
  font-size:40em;
}


/*ad links */
#cardTitle:hover{
  text-decoration: none;
}

/* profile page css*/

.user-row {
    margin-bottom: 14px;
}

.user-row:last-child {
    margin-bottom: 0;
}

/* Drop Down
.dropdown-user {
    margin: 13px 0;
    padding: 5px;
    height: 100%;
}*/

/* dropdown on hover css */
.dropdown:hover>.dropdown-menu {
  display: block;
}

/* Sor by css */
#sortByDropdown, .category_breadcrumb {
    padding-top: 15px;
}

.dropdown-user:hover {
    cursor: pointer;
}
#sortByDropdown2, .category_breadcrumb {
    padding-top: 5px;
}
/* End Dropdown*/
.dropdown-item {
    cursor: pointer;
    cursor: hand;
}
/*
.table-user-information > tbody > tr {
    border-top: 1px solid rgb(221, 221, 221);
}

.table-user-information > tbody > tr:first-child {
    border-top: 0;
}


.table-user-information > tbody > tr > td {
    border-top: 0;
}
*/

/*Wishlist Page*/
#deleteWishlistBtn:hover, #addWishlistBtn:hover {
    cursor: pointer;
}
#addWishlistBtn{
  background: none;
  border: none;
}
.star:hover .fa-star-o,
.star .fa-star{
    display: none;
}
.star:hover .fa-star {
    display: inline;
    color:#ffd633;
}
#space{
  display:flex;
  justify-content: space-between;
}
/*profile page css end*/
.form-box {
    margin-top: 40px;
    margin-right: 50px;
    padding-right: 65px;
   
}
.form-top {
    overflow: hidden;
    padding: 0 15px 15px 25px;
    background: #444;
    background: rgba(0, 0, 0, 0.2);
    -moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
    text-align: left;
}
.form-top-left {
    float: left;
    width: 75%;
    padding-top: 25px;
}
.form-top-left h3 { margin-top: 0; color: #fff; }

.form-top-left p { opacity: 0.8; color: #fff; }

.form-top-right {
    float: left;
    width: 25%;
    padding-top: 0px;
    font-size: 66px;
    color: #fff;
    line-height: 100px;
    text-align: right;
    opacity: 0.3;
}

.form-bottom {
    padding: 25px 25px 30px 25px;
    background: #444;
    background: rgba(0, 0, 0, 0.1);
    -moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
    text-align: left;
}

.form-bottom form textarea {
    height: 100px;
}

.form-bottom form button.btn {
    width: 100%;
}

.form-bottom form .input-error {
    border-color: #19b9e7;
}

.btn{
    color: #ffffff;
}

.checkbox {
    color: #ffffff;
}

